--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <title>
             This is our First Lab for this sem 
         </title>
         </head>
+        <nav>
+        <ul>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
         <body>
-            <h1>Hi Everyone!!</h1>
-            <h3>My Name is Sai Srujan Vanama</h3>
+            <h1 class="first">Hi Everyone!!</h1>
+            <h2> How are you doing today </h2>
+            <h3 id="name">My Name is Sai Srujan Vanama</h3>
             <p>I am from ITM Department</p>
+            <p class="About"> My Experience with WEB !!
+                I have worked as a Web Developer for almost 3 years in Software Industry and I used to develop web Application and also for building forms
+                In my tenure I worked on HTML,CSS and Bootstrap and also Javascript as part of my daily work and I definitely liked the work.
+                </p> 
+                <p>
+                    On this website, you'll find information about me, my projects, and how to get in touch with me. Feel free to explore and learn more about my work.
+                </p>
             </body>
     </html>
