--- a/index.html
+++ b/index.html
@@ -8,24 +8,45 @@
             This is our First Lab for this sem 
         </title>
         </head>
-        <nav>
+        
+        <body>
+            <nav>
         <ul>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </nav>
-        <body>
+            <div class="firstdiv">
             <h1 class="first">Hi Everyone!!</h1>
             <h2> How are you doing today </h2>
             <h3 id="name">My Name is Sai Srujan Vanama</h3>
             <p>I am from ITM Department</p>
             <p class="About"> My Experience with WEB !!
-                I have worked as a Web Developer for almost 3 years in Software Industry and I used to develop web Application and also for building forms
+                In my undergraduate I have completed my webTechnologies course which contained html and css and secured top marks.
+                I have worked for almost 3 years in Software Industry and I used to develop web Application and also for building forms
                 In my tenure I worked on HTML,CSS and Bootstrap and also Javascript as part of my daily work and I definitely liked the work.
                 </p> 
                 <p>
                     On this website, you'll find information about me, my projects, and how to get in touch with me. Feel free to explore and learn more about my work.
                 </p>
-            </body>
+                <a href =https://en.wikipedia.org/wiki/HTML class="linkpage">If you want to more about Html follow this link to wiki</a>
+                </div>
+                <div id="seconddiv">
+                    <div class="box">
+                        <img src="html.png" alt="html" width="500" height="300">
+                        <p class="box-text">HTML</p> 
+                        </div>
+                        <div class="box">
+                            <img src="css.png" alt="css" width="500" height="300">
+                             <p class="box-text">CSS</p>
+                            </div>
+                            <div class="box">
+                                <img src="js.png" alt="javascript" width="500" height="300">
+                                <p class="box-text">Javascript</p>
+                                </div>
+                </div>
+                </div>
+            </body> 
+            
     </html>
