Design and code changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         </head>
         
         <body>
+            
+            <img src="Sai_Srujan.jpg" alt="mypic" id="left-image" width="250" height="250">
+            <a href = "mailto: saisrujanv77@gmail.com" class="email">Email : saisrujanv77@gmail.com</a>
+            <a href = "https://www.linkedin.com/in/sai-srujan-39438b154/" class="linkedin">Connect with me on Linkedin</a>
             <nav>
         <ul>
             <li><a href="about.html">About Me</a></li>
@@ -18,32 +22,34 @@
         </ul>
         </nav>
             <div class="firstdiv">
-            <h1 class="first">Hi Everyone!!</h1>
+            <h1 class="first">Hi Everyone!! Welcome to my Web Page</h1>
             <h2> How are you doing today </h2>
             <h3 id="name">My Name is Sai Srujan Vanama</h3>
-            <p>I am from ITM Department</p>
-            <p class="About"> My Experience with WEB !!
+            <h4>I am from ITM Department</h4>
+            <p class="About"><span class="bg-text">My WEB Experience !!</span></p>
+            <p class="About1">
                 In my undergraduate I have completed my webTechnologies course which contained html and css and secured top marks.
-                I have worked for almost 3 years in Software Industry and I used to develop web Application and also for building forms
+                I have worked for almost 3 years in Software Industry and I used to develop web Application and also for building forms.
                 In my tenure I worked on HTML,CSS and Bootstrap and also Javascript as part of my daily work and I definitely liked the work.
-                </p> 
+            </p> 
                 <p>
                     On this website, you'll find information about me, my projects, and how to get in touch with me. Feel free to explore and learn more about my work.
                 </p>
-                <a href =https://en.wikipedia.org/wiki/HTML class="linkpage">If you want to more about Html follow this link to wiki</a>
+                <p class="learning"><span class="bg-text">If you want to learn more about Web technologies follow the links below</span></p>
+                <a href =https://en.wikipedia.org/wiki/HTML target="_blank" class="linkpage">If you want to more about Html follow this link to wiki</a>
                 </div>
                 <div id="seconddiv">
                     <div class="box">
                         <img src="html.png" alt="html" width="500" height="300">
-                        <p class="box-text">HTML</p> 
+                        <p class="box-text"><a href =https://en.wikipedia.org/wiki/HTML target="_blank">HTML</a></p> 
                         </div>
                         <div class="box">
                             <img src="css.png" alt="css" width="500" height="300">
-                             <p class="box-text">CSS</p>
+                             <p class="box-text"><a href =https://en.wikipedia.org/wiki/CSS target="_blank">CSS</a></p>
                             </div>
                             <div class="box">
                                 <img src="js.png" alt="javascript" width="500" height="300">
-                                <p class="box-text">Javascript</p>
+                                <p class="box-text"><a href =https://en.wikipedia.org/wiki/JavaScript target="_blank">Javascript</a></p>
                                 </div>
                 </div>
                 </div>
