--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         </head>
         
         <body>
-            
+            <section>
             <img src="Sai_Srujan.jpg" alt="mypic" id="left-image" width="250" height="250">
-            <a href = "mailto: saisrujanv77@gmail.com" class="email">Email : saisrujanv77@gmail.com</a>
-            <a href = "https://www.linkedin.com/in/sai-srujan-39438b154/" class="linkedin">Connect with me on Linkedin</a>
+            <a href = "mailto: saisrujanv77@gmail.com" class="email" target="_blank">Email : saisrujanv77@gmail.com</a>
+            <a href = "https://www.linkedin.com/in/sai-srujan-39438b154/" class="linkedin" target="_blank">Connect with me on Linkedin</a>
+            <p id="location"> Address : Chicago </p>
+            </section>
             <nav>
         <ul>
             <li><a href="about.html">About Me</a></li>
@@ -36,7 +38,7 @@
                     On this website, you'll find information about me, my projects, and how to get in touch with me. Feel free to explore and learn more about my work.
                 </p>
                 <p class="learning"><span class="bg-text">If you want to learn more about Web technologies follow the links below</span></p>
-                <a href =https://en.wikipedia.org/wiki/HTML target="_blank" class="linkpage">If you want to more about Html follow this link to wiki</a>
+                <a href =https://en.wikipedia.org/wiki/HTML target="_blank" class="linkpage">If you want to learn more about Html follow this link to wiki</a>
                 </div>
                 <div id="seconddiv">
                     <div class="box">
