--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -31,7 +31,7 @@
                     <input type="text" id="tip-amount" disabled>
                 </div>
                 <div class="form-group">
-                    <label for="total-bill">Total Bill ($):</label>
+                    <label for="total-bill">Total Bill With Tip ($):</label>
                     <input type="text" id="total-bill" disabled>
                 </div>
             </form>
