--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -23,26 +23,28 @@
     <div class="dashboard"> 
       <ul id="todayWeatherData">
         <h2>Today Weather Data</h2>
-        <li>Sunrise: <span id="todaySunrise"></span></li>
-        <li>Sunset: <span id="todaySunset"></span></li>
-        <li>Dawn: <span id="todayDawn"></span></li>
-        <li>Dusk: <span id="todayDusk"></span></li>
-        <li>Day Length: <span id="todayDayLength"></span></li>
-        <li>Solar Noon Time: <span id="todaySolarNoon"></span></li>
-        <li>TimeZone: <span id="todayTimeZone"></span></li>
+        <hr> 
+        <li><i class="icon fas fa-sun"></i>Sunrise: <span id="todaySunrise"></span></li>
+        <li><i class="icon fas fa-moon"></i>Sunset: <span id="todaySunset"></span></li>
+        <li><i class="icon fas fa-chevron-up"></i>Dawn: <span id="todayDawn"></span></li>
+        <li><i class="icon fas fa-chevron-down"></i>Dusk: <span id="todayDusk"></span></li>
+        <li><i class="icon fas fa-hourglass"></i>Day Length: <span id="todayDayLength"></span></li>
+        <li><i class="icon fas fa-clock "></i>Solar Noon Time: <span id="todaySolarNoon"></span></li>
+        <li><i class="icon fas fa-globe"></i>TimeZone: <span id="todayTimeZone"></span></li>
       </ul>
     </div>
 
     <div class="dashboard2"> 
         <ul id="tomorrowWeatherData">
             <h2>Tomorrow's Weather Data</h2>
-            <li>Sunrise: <span id="tomorrowSunrise"></span></li>
-            <li>Sunset: <span id="tomorrowSunset"></span></li>
-            <li>Dawn: <span id="tomorrowDawn"></span></li>
-            <li>Dusk: <span id="tomorrowDusk"></span></li>
-            <li>Day Length: <span id="tomorrowDayLength"></span></li>
-            <li>Solar Noon Time: <span id="tomorrowSolarNoon"></span></li>
-            <li>TimeZone: <span id="tomorrowTimeZone"></span></li>
+            <hr> 
+            <li><i class="icon fas fa-sun"></i>Sunrise: <span id="tomorrowSunrise"></span></li>
+            <li><i class="icon fas fa-moon"></i>Sunset: <span id="tomorrowSunset"></span></li>
+            <li><i class="icon fas fa-chevron-up"></i>Dawn: <span id="tomorrowDawn"></span></li>
+            <li><i class="icon fas fa-chevron-down"></i>Dusk: <span id="tomorrowDusk"></span></li>
+            <li><i class="icon fas fa-hourglass"></i>Day Length: <span id="tomorrowDayLength"></span></li>
+            <li><i class="icon fas fa-clock "></i>Solar Noon Time: <span id="tomorrowSolarNoon"></span></li>
+            <li><i class="icon fas fa-globe"></i>TimeZone: <span id="tomorrowTimeZone"></span></li>
         </ul> 
     </div>
    
