--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -15,7 +15,7 @@
       <label for="location">Search Location:</label>
       <input type="text" id="location" placeholder="Enter a location">
       <input type="button" onclick="sendRequest();" value="Get Weather"/>
-      <button id="geolocationBtn">Get Current Location</button>
+      <button id="geolocationBtn">Get Current Location Weather</button>
     </div>
     <div class="errors">
       <h2 id="emptyresponse"></h2>  
