--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -51,5 +51,9 @@
    
   </main>
   <script src="scripts.js"></script>
+  <footer id="credit">
+    <span> Powered by</span><a href="https://sunrisesunset.io/"> " SunriseSunset.io "</a>
+     </footer>
 </body>
+
 </html>
